gnome: Fix overlap between UI slider labels and the <input> above it

--- a/public/css/style-gnome.css
+++ b/public/css/style-gnome.css
@@ -69,7 +69,7 @@ table:not(.submission-form) th, table:not(.submission-form) td {
 
 .ui-slider {
     height: 1.4em;
-    margin-top: .5em;
+    margin-top: 1.7em;
     margin-bottom: 2.3em;
     width: 100%;
 }
